--- a/src/views/partials/product.ejs
+++ b/src/views/partials/product.ejs
@@ -1,37 +1,45 @@
+<main class="main">
 
-            <main class="main">
-
-
-                
-                <section class="listadoDeProductos">
-                    <h3>
-                        Dirección: <%= casa.address %>
-                    </h3>
-                    <% casa.image.forEach(image =>{ %>
-                    <img src="/img/products/<%= image.image_name %>" alt="" class="listProductsImage">
-                    <% }) %>
+    <section class="DetalleDeProductos">
+        <h2>
+            Destino: <%= casa.destination.destination %>
+        </h2>
+        <h3>
+            Dirección: <%= casa.address %>
+        </h3>
+        <div class="containerProf">
+            <% casa.image.forEach(image=>{ %>
+                <img src="/img/products/<%= image.image_name %>" alt="" class="listProductsImage">
+                <% }) %>
+                <div class="info">
                     <p>
                         Cantidad máxima de personas: <%= casa.n_of_people %>
                     </p>
+                    <p>Precio por noche: $<%= new Intl.NumberFormat('de-DE', { style: 'decimal' }).format(casa.price)
+                        %>
+                </p>
                     <div class="campo">
-                        <label>Servicios</label> <br>
-                        <label class="check"><input type="checkbox" name="wifi" <%= locals.casa && casa.wifi == 1 ? 'checked' : null %>>
-                        Wi-fi</label>
+                        <div class="intereses">
+                        <label class="label">Servicios</label> <br>
+                        <label class="check"><input type="checkbox" name="wifi" <%=locals.casa && casa.wifi==1
+                                ? 'checked' : null %>>
+                            Wi-fi</label>
                         <br>
-                        <label class="check"><input type="checkbox" name="pool" <%= locals.casa && casa.pool == 1 ? 'checked' : null %>>
-                        Pileta</label>
+                        <label class="check"><input type="checkbox" name="pool" <%=locals.casa && casa.pool==1
+                                ? 'checked' : null %>>
+                            Pileta</label>
                         <br>
-                        <label class="check"><input type="checkbox" name="parking"
-                            <%= locals.casa && casa.parking == 1 ? 'checked' : null %>>Estacionamiento</label>
+                        <label class="check"><input type="checkbox" name="parking" <%=locals.casa && casa.parking==1
+                                ? 'checked' : null %>>Estacionamiento</label>
                         <br>
-                        <label class="check"><input type="checkbox" name="barbecue"
-                            <%= locals.casa && casa.barbecue ? 'checked' : null %>>
-                        Parrilla</label>
+                        <label class="check"><input type="checkbox" name="barbecue" <%=locals.casa && casa.barbecue
+                                ? 'checked' : null %>>
+                            Parrilla</label>
+                        </div>
                     </div>
-                    <h5>Precio por noche: $<%= new Intl.NumberFormat('de-DE', { style: 'decimal' }).format(casa.price) %>
-                    </h5>
-
-                    <script src="/js/detalleCrud.js"></script>
-                </section>
-            </main>
-            
+                    
+                </div>
+        </div>
+        <script src="/js/detalleCrud.js"></script>
+    </section>
+</main>
