--- a/src/views/products/detalleCrud.ejs
+++ b/src/views/products/detalleCrud.ejs
@@ -14,13 +14,13 @@
                 <%- include ('../partials/product') %>
                     <div class="botones">
                         <form action="/products/<%= casa.id %>/edit" class="editar">
-                            <button>Editar</button>
+                            <button class="detall_button">Editar</button>
                         </form>
                         <form action="/products" class="editar" >
-                            <button>Volver</button>
+                            <button class="detall_button">Volver</button>
                         </form>
                         <form action="/products/<%= casa.id %>?_method=DELETE" method="POST">
-                            <button class="borrar">Borrar</button>
+                            <button class="detall_button">Borrar</button>
                         </form>
                     </div>
             </main>
