--- a/public/css/styleSheet.css
+++ b/public/css/styleSheet.css
@@ -104,6 +104,10 @@ section{
     color:red;
 }
 
+.main{
+    margin-top: 60;
+}
+
 /*================== Register =======================*/
 .form{
     background-color: #b0d4e9;
@@ -181,7 +185,7 @@ section{
 
 /*================== profile =======================*/         
 .containerProf{
-    margin-top: 100px;
+    margin-top: 20px;
     display: flex;
 }
     .containerProf img{
@@ -224,7 +228,28 @@ section{
                 text-decoration: none;
                 color: #ffffff;
             }
+/*================== Detalle producto =======================*/
 
+.DetalleDeProductos{
+    margin-top: 0%;
+    color: hsl(202, 61%, 50%); 
+}
+.detall_button{
+    background-color:#1259c3;
+            border: none;
+            font-size: 15px;
+            color: #ffffff;
+            padding: 10px;
+            border-radius: 4px;
+            height: 35px;
+            margin: 2px;
+}
+.detalle_botones{
+    display: flex;
+}
+.botones {
+    display: flex;
+}
 /*================== Footer =======================*/
 .redes {
     display: flex;
@@ -278,6 +303,16 @@ section{
                 font-size: 12px;
             }
 
+
+
+.image img {
+    display: block;
+    /* width: 100%; */
+    max-height: 260px;
+    max-width: 260px;
+    height: auto;
+}
+            
 
 @media (min-width:860px){
     .accesos{
@@ -345,6 +380,7 @@ section{
             max-width: 100px;
         }
 }
+
 
 /*================== Index =======================*/
 .main-body{
