--- a/src/views/products/createProducts.ejs
+++ b/src/views/products/createProducts.ejs
@@ -148,7 +148,7 @@
                 <br>
                 <input 
                     type="checkbox" 
-                    name="barbacue" 
+                    name="barbecue" 
                     value=1
                     <%= locals.oldData && oldData.servicios && oldData.servicios.includes("parrilla") ? 'checked' : null %>>
                 <label for="servicios">Parrilla</label>
