Vista de destinos

--- a/src/views/users/profile.ejs
+++ b/src/views/users/profile.ejs
@@ -48,6 +48,9 @@
                                 <button class="profile_button">
                                     <a href="/register"> Crear Usuario</a>
                                 </button>
+                                <button class="profile_button">
+                                    <a href="/destinations"> Destinos</a>
+                                </button>
                             
                             <%} %>
                         </div>
