--- a/src/views/products/editProperty.ejs
+++ b/src/views/products/editProperty.ejs
@@ -51,7 +51,7 @@
         </div>
 
         <div class="campo">
-            <label for="price">Precio</label>
+            <label for="price">Precio por noche</label>
             <input 
                 type="text" 
                 name="price" 
