--- a/src/views/users/profile.ejs
+++ b/src/views/users/profile.ejs
@@ -8,7 +8,7 @@
         <%- include ('../partials/header') %>
             <section>
                 <div class="containerProf">
-                    <img src="/img/users/<%=user.avatar%>">
+                    <img src="/img/users/<%=user.avatar%>" class="avatar">
 
                     <div class="info">
                         <p>
