--- a/public/css/styleSheet.css
+++ b/public/css/styleSheet.css
@@ -188,7 +188,7 @@ section{
     margin-top: 20px;
     display: flex;
 }
-    .containerProf img{
+    .avatar{
         margin-left: 0;
         width: 40%;
     }
@@ -224,6 +224,23 @@ section{
                 color: #ffffff;
             }
 /*================== Detalle producto =======================*/
+.fotos{
+    width: 40%;
+}
+    .listProductsImage{
+        display:block;
+        width: 100%;
+        margin-bottom: 10px;
+    }
+.info_prod{
+    margin-left: 30px ;
+    font-size: 20px;
+}
+
+.info_prod label{
+   
+    font-size: 20px;
+} 
 
 .DetalleDeProductos{
     margin-top: 0%;
