Corrección de Header

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -29,7 +29,7 @@
             <h1 class="nombre-logo">Serena</h1>
             
 <% if (locals.isLogged){ %>
-<p class="saludos">   Hola <%=locals.user.first_name%>!</p>
+<p class="saludos">   Hola <%=locals.userLogged.first_name%>!</p>
 <% } %>
 
         </div>
