--- a/src/views/partials/product.ejs
+++ b/src/views/partials/product.ejs
@@ -2,7 +2,7 @@
 
     <section class="DetalleDeProductos">
         <h2>
-            Destino: <%= destino.destination %>
+            Destino: <%= casa.destination.destination %>
         </h2>
         <h3>
             Dirección: <%= casa.address %>
