--- a/src/views/users/profile.ejs
+++ b/src/views/users/profile.ejs
@@ -42,7 +42,7 @@
                                 <a href="/products/create"> Publicar</a>
                             </button>
                             <button class="profile_button">
-                                <a href=""> Publicaciones</a>
+                                <a href="/products/"> Publicaciones</a>
                             </button>
                             <% if(locals.admLogged){ %>
                                 <button class="profile_button">
