Guille: Adaptaciones de estilos

--- a/src/views/products/createProducts.ejs
+++ b/src/views/products/createProducts.ejs
@@ -4,9 +4,9 @@
     <%- include ('../partials/header') %>
 
     <main class="main">
-        <h3>Nueva propiedad</h3>
+        <h3 class="titulos">Nueva propiedad</h3>
         
-        <form method="POST" action="/products" enctype="multipart/form-data" class="addProd"> 
+        <form method="POST" action="/products" enctype="multipart/form-data" class="form_edit"> 
             <div class="campo">
                 <label for="categ">Categoría</label>
                 <select 
