--- a/src/views/products/detalleCrud.ejs
+++ b/src/views/products/detalleCrud.ejs
@@ -10,7 +10,7 @@
             <main class="main">
 
 
-                <h1>Detalle del producto</h1>
+                <h1 class="titulos">Detalle del producto</h1>
                 <%- include ('../partials/product') %>
                     <div class="botones">
                         <form action="/products/<%= casa.id %>/edit" class="editar">
