--- a/src/views/products/listProductsCrud.ejs
+++ b/src/views/products/listProductsCrud.ejs
@@ -8,7 +8,7 @@
         <%- include ('../partials/header') %>
             <main class="main">
 
-                <h1>Listado de productos</h1>
+                <h1 class="titulos">Listado de productos</h1>
 
                 <section class="listadoDeProductos">
                     <% casas.forEach (casa=> {%>
