--- a/src/views/products/productCart.ejs
+++ b/src/views/products/productCart.ejs
@@ -59,7 +59,7 @@
                 </div>
             </article>
             <div class="info-cont">
-                <form action="/procesrPago" method="POST" class="form-datos-pago">
+                <form action="/cart/<%=property.id%>" method="POST" class="form-datos-pago">
                     <h4>Condiciones del alquiler:</h4>
                     <div class="cond-alq">
                         <div class="datos-alq">
@@ -102,17 +102,63 @@
                                 <h5 class="dato"><%= user.telephone%></h5>
                             </div>
                         </article>
-
                     </div>
+
+                    <h4>Datos para el pago:</h4>
+                    <div class="datos-pago">
+
+                        <div class="titular-tta">
+                            <label>Titular de la Tarjeta:</label>
+                            <input type="text" name="titularTarjeta" class="control-pago" required>
+                        </div>
+                        <div class="tipo-tta">
+                            <label>Tipo de Tarjeta de Crédito:</label>
+                            <select name="tipoTarjeta" class="control-pago" required>
+                                <option value="visa">Visa</option>
+                                <option value="master">Mastercard</option>
+                                <option value="American">American Express</option>
+                            </select>
+                        </div>
+                        <div class="fecha-expir">
+                            <label>Fecha de expiración:</label>
+                            <select name="mesExpiracion" class="control-pago" required>
+                                <option value="ene">Enero</option>
+                                <option value="feb">Febrero</option>
+                                <option value="mar">Marzo</option>
+                                <option value="abr">Abril</option>
+                                <option value="may">Mayo</option>
+                                <option value="jun">Junio</option>
+                                <option value="jul">Julio</option>
+                                <option value="ago">Agosto</option>
+                                <option value="sept">Septiembre</option>
+                                <option value="oct">Octubre</option>
+                                <option value="nov">Noviembre</option>
+                                <option value="dic">Diciembre</option>
+                            </select>
+
+                            <label class="separador">/</label>
+                            <select name="mesExpiracion" class="control-pago" required>
+                                <option value="2021">2021</option>
+                                <option value="2022">2022</option>
+                                <option value="2023">2023</option>
+                                <option value="2024">2024</option>
+                                <option value="2025">2025</option>
+                                <option value="2026">2026</option>
+                                <option value="2027">2027</option>
+                                <option value="2028">2028</option>
+                                <option value="2029">2029</option>
+                                <option value="2030">2030</option>
+                                <option value="2031">2031</option>
+                                <option value="2032">2032</option>
+                            </select>
+                        </div>
+                    </div>
+
                     <div class="botones">
-                        <button type="submit">Enviar</button>
-                        <button type="Reset">Reset</button>
+                        <button type="submit">Confirmar</button>
+                        <button type="Reset">Cancelar</button>
                     </div>
                 </form>
-
-
-
-
 
             </div>
         </section>
