Cart funcionando alta en BD

--- a/src/views/products/productCart.ejs
+++ b/src/views/products/productCart.ejs
@@ -122,22 +122,22 @@
                         <div class="fecha-expir">
                             <label>Fecha de expiración:</label>
                             <select name="mesExpiracion" class="control-pago" required>
-                                <option value="ene">Enero</option>
-                                <option value="feb">Febrero</option>
-                                <option value="mar">Marzo</option>
-                                <option value="abr">Abril</option>
-                                <option value="may">Mayo</option>
-                                <option value="jun">Junio</option>
-                                <option value="jul">Julio</option>
-                                <option value="ago">Agosto</option>
-                                <option value="sept">Septiembre</option>
-                                <option value="oct">Octubre</option>
-                                <option value="nov">Noviembre</option>
-                                <option value="dic">Diciembre</option>
+                                <option value="1">Enero</option>
+                                <option value="2">Febrero</option>
+                                <option value="3">Marzo</option>
+                                <option value="4">Abril</option>
+                                <option value="5">Mayo</option>
+                                <option value="6">Junio</option>
+                                <option value="7">Julio</option>
+                                <option value="8">Agosto</option>
+                                <option value="9">Septiembre</option>
+                                <option value="10">Octubre</option>
+                                <option value="11">Noviembre</option>
+                                <option value="12">Diciembre</option>
                             </select>
 
                             <label class="separador">/</label>
-                            <select name="mesExpiracion" class="control-pago" required>
+                            <select name="anioExpiracion" class="control-pago" required>
                                 <option value="2021">2021</option>
                                 <option value="2022">2022</option>
                                 <option value="2023">2023</option>
